--- a/个人简历/resume.html
+++ b/个人简历/resume.html
@@ -46,15 +46,15 @@
             <div class="main3">
             <div class="nengli"><h2>能力描述</h2></div>
             <div class="nengli1">
-            <p>技术能力<br>熟练掌握HTML,css，JavaScript.</p>
-            <p>综合能力<br>良好的沟通，主动积极，努力勤奋</p>
+            <p>技术能力<br>熟练掌握HTML,css，JavaScript.<br><br>
+            综合能力<br>良好的沟通，主动积极，努力勤奋</p>
             </div>
             </div>
             <div class="main4">
             <div class="jiaoyu"><h2>教育经历</h2></div>
             <div class="jiaoyu1">
-            <p>本科<br>百度前端技术学院</p>
-            <p>研究生<br>百度前端技术学院</p>
+            <p>本科<br>百度前端技术学院<br><br>
+            研究生<br>百度前端技术学院</p>
             </div>
             </div>
             <div class="main5">
