--- a/个人简历/resume.html
+++ b/个人简历/resume.html
@@ -45,23 +45,29 @@
             </div>
             <div class="main3">
             <div class="nengli"><h2>能力描述</h2></div>
-            <div class="nengli1">
-            <p>技术能力<br>熟练掌握HTML,css，JavaScript.<br><br>
-            综合能力<br>良好的沟通，主动积极，努力勤奋</p>
-            </div>
+            <div class="nengli"></div>
+            <dl>
+            <dt>技术能力</dt><dd>熟练掌握HTML,css，JavaScript.</dd>
+            <dt>综合能力</dt><dd>良好的沟通，主动积极，努力勤奋</dd>
+            </dl>
+            
             </div>
             <div class="main4">
             <div class="jiaoyu"><h2>教育经历</h2></div>
             <div class="jiaoyu1">
-            <p>本科<br>百度前端技术学院<br><br>
-            研究生<br>百度前端技术学院</p>
+                <dl>
+            <dt>本科</dt><dd>百度前端技术学院</dd>
+            <dt>研究生</dt><dd>百度前端技术学院</dd>
+            </dl>
             </div>
             </div>
             <div class="main5">
             <div class="xiangmu"><h2>项目经历</h2></div>
             <div class="xiangmu1">
-            <p>小家伙<br>作为小家伙的前端开发工程师设计他的头</p>
-            <p>老家伙<br>作为老家伙的前端开发工程师设计他的脚</p>
+                <dl>
+            <dt>小家伙</dt><dd>作为小家伙的前端开发工程师设计他的头</dd>
+            <dt>老家伙</dt><dd>作为老家伙的前端开发工程师设计他的脚</dd>
+            </dl>
             </div>
             </div>
           
