--- a/firstweb/index.html
+++ b/firstweb/index.html
@@ -46,27 +46,40 @@
                     <p>Ready-made,customizable,HTML</p>
                     <P>landing page sections</P>
                 </div>
+
                 <div class="two_main_content">
                     <div class="two_main_content_left1">
                         <img src="images/two_01.png"/>
-                        <h4>Mobile First</h4>
-                        <p>All modulz are built mobile-first for maximum<br>device compatibility.</p>
+                        <div class="two_main_content_1">
+                            <h4>Mobile First</h4>
+                            <p>All modulz are built mobile-first for maximum<br>device compatibility.</p>
+                        </div>
                     </div>
+
                     <div class="two_main_content_right1">
                         <img src="images/two_02.png"/>
-                        <h4>Accessibility</h4>
-                        <p>Support for IE8.mobile and tablet devices.<br>screenreaders and color blind.</p>
+                        <div class="two_main_content_1">
+                            <h4>Accessibility</h4>
+                            <p>Support for IE8.mobile and tablet devices.<br>screenreaders and color blind.</p>
+                        </div>  
                     </div>
+
                     <div class="two_main_content_left2">
                         <img src="images/two_03.png"/>
-                        <h4>Fluid Typography</h4>
-                        <p>On different screen sizes.fonts automagically<br>scale with the viewport</p>
+                        <div class="two_main_content_1">
+                            <h4>Fluid Typography</h4>
+                            <p>On different screen sizes.fonts automagically<br>scale with the viewport</p>
+                        </div> 
                     </div>
+
                     <div class="two_main_content_right2">
                         <img src="images/two_04.png"/>
-                        <h4>customization</h4>
-                        <p>On different screen sizes.fonts automagically<br>scale with the viewport</p>
-                    </div>
+                        <div class="two_main_content_1">
+                            <h4>customization</h4>
+                            <p>On different screen sizes.fonts automagically<br>scale with the viewport</p>
+                        </div>
+                   </div>
+
                 </div>
             </div>
         </div>
@@ -159,16 +172,16 @@
                     <h4>FELL FREE TO WRITE US</h4>
                     <input type="text">
                     <input type="text">
-                    <input type="textarea">
+                    <textarea></textarea>
                     <button>SEND</button>
                 </div>
                 <div class="seven_content">
                     <h2>Contacts</h2>
-                    <p>Make any of the alliance's experts' committee. said that China will 
+                    <p class="a">Make any of the alliance's experts' committee. said that China will 
                     also launch design guicance for smart </p>
-                    <p>360 king stress<br>jdksakajksjdklasjdklsajdklsajk</p>
-                    <p>12225-452522-255</p>
-                    <p>yuangmail@fox.com</p>
+                    <p class="b">360 king stress<br>jdksakajksjdklasjdklsajdklsajk</p>
+                    <p class="c">12225-452522-255</p>
+                    <p class="d">yuangmail@fox.com</p>
                 </div>
             </div>
         </div>
