--- a/firstweb/index.html
+++ b/firstweb/index.html
@@ -157,10 +157,30 @@
                 <h3>Our Awesome Crew</h3>
                 <p>said that China will also launch design guicance for smart cars.smart map architecture </p>
                 <div class="photo">
-                    <img src="images/man1.png">
-                    <img src="images/man2.png">
-                    <img src="images/man3.png">
-                    <img src="images/man4.png">
+                    <div class="photo_main">
+                        <img src="images/man1.png">
+                        <div class="photo1">
+                            cdsjakdjakshdksa
+                        </div>
+                    </div>
+                    <div class="photo_main">
+                        <img src="images/man2.png">
+                        <div class="photo1">
+                            dhsakjhdsjak
+                        </div>
+                    </div>
+                    <div class="photo_main">
+                        <img src="images/man3.png">
+                        <div class="photo1">
+                            dhsakjhdsjak
+                        </div>
+                    </div>
+                    <div class="photo_main">
+                        <img src="images/man4.png">
+                        <div class="photo1">
+                            dhsakjhdsjak
+                        </div>
+                    </div>
                 </div>
             </div> 
         </div>
